--- a/learn/Traditional NLP Metrics.ipynb
+++ b/learn/Traditional NLP Metrics.ipynb
@@ -165,6 +165,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ROUGE (Recall-Oriented Understudy for Gisting Evaluation)\n",
+    "\n",
+    "How ROUGE Works\n",
+    "\n",
+    "ROUGE measures recall-based word overlap, used mainly for summarization.\n",
+    "\n",
+    "Types of ROUGE\n",
+    "\n",
+    "\t1.\tROUGE-1: Unigram (single word) overlap.\n",
+    "\n",
+    "\t2.\tROUGE-2: Bigram (two consecutive words) overlap.\n",
+    "\t\n",
+    "\t3.\tROUGE-L: Longest Common Subsequence (LCS).\n",
+    "\n",
+    "ROUGE Formula\n",
+    "\n",
+    "\n",
+    "$$ ROUGE = \\frac{|Overlapping\\ words|}{|Words\\ in\\ reference|} $$\n",
+    "\n",
+    "It calculates Precision, Recall, and F1-score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting rouge-score\n",
+      "  Downloading rouge_score-0.1.2.tar.gz (17 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting absl-py (from rouge-score)\n",
+      "  Using cached absl_py-2.1.0-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Requirement already satisfied: nltk in /Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages (from rouge-score) (3.9.1)\n",
+      "Requirement already satisfied: numpy in /Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages (from rouge-score) (1.26.4)\n",
+      "Requirement already satisfied: six>=1.14.0 in /Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages (from rouge-score) (1.16.0)\n",
+      "Requirement already satisfied: click in /Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages (from nltk->rouge-score) (8.1.8)\n",
+      "Requirement already satisfied: joblib in /Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages (from nltk->rouge-score) (1.4.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages (from nltk->rouge-score) (2024.7.24)\n",
+      "Requirement already satisfied: tqdm in /Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages (from nltk->rouge-score) (4.66.4)\n",
+      "Using cached absl_py-2.1.0-py3-none-any.whl (133 kB)\n",
+      "Building wheels for collected packages: rouge-score\n",
+      "  Building wheel for rouge-score (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for rouge-score: filename=rouge_score-0.1.2-py3-none-any.whl size=24934 sha256=3046cb3a98d41d4e3d04b8394fddd2db5bf2e737f6ef475958d09baa19cab898\n",
+      "  Stored in directory: /Users/harshbhatt/Library/Caches/pip/wheels/1e/19/43/8a442dc83660ca25e163e1bd1f89919284ab0d0c1475475148\n",
+      "Successfully built rouge-score\n",
+      "Installing collected packages: absl-py, rouge-score\n",
+      "Successfully installed absl-py-2.1.0 rouge-score-0.1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install rouge-score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rouge1: Precision=0.6667, Recall=0.6667, F1-Score=0.6667\n",
+      "rouge2: Precision=0.4000, Recall=0.4000, F1-Score=0.4000\n",
+      "rougeL: Precision=0.6667, Recall=0.6667, F1-Score=0.6667\n"
+     ]
+    }
+   ],
+   "source": [
+    "from rouge_score import rouge_scorer\n",
+    "\n",
+    "# Example 1\n",
+    "reference = \"the cat is on the mat\"\n",
+    "candidate = \"the cat sits on the floor\"\n",
+    "\n",
+    "scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
+    "scores = scorer.score(reference, candidate)\n",
+    "\n",
+    "# Display scores\n",
+    "for key, value in scores.items():\n",
+    "    print(f\"{key}: Precision={value.precision:.4f}, Recall={value.recall:.4f}, F1-Score={value.fmeasure:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rouge1: Precision=1.0000, Recall=1.0000, F1-Score=1.0000\n",
+      "rouge2: Precision=1.0000, Recall=1.0000, F1-Score=1.0000\n",
+      "rougeL: Precision=1.0000, Recall=1.0000, F1-Score=1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2 - Perfect match\n",
+    "reference = \"the cat is on the mat\"\n",
+    "candidate = \"the cat is on the mat\"\n",
+    "\n",
+    "scores = scorer.score(reference, candidate)\n",
+    "for key, value in scores.items():\n",
+    "    print(f\"{key}: Precision={value.precision:.4f}, Recall={value.recall:.4f}, F1-Score={value.fmeasure:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rouge1: Precision=0.1250, Recall=0.1111, F1-Score=0.1176\n",
+      "rouge2: Precision=0.0000, Recall=0.0000, F1-Score=0.0000\n",
+      "rougeL: Precision=0.1250, Recall=0.1111, F1-Score=0.1176\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3 - More different sentence\n",
+    "reference = \"The quick brown fox jumps over the lazy dog\"\n",
+    "candidate = \"A fast fox leaps above a sleepy canine\"\n",
+    "\n",
+    "scores = scorer.score(reference, candidate)\n",
+    "for key, value in scores.items():\n",
+    "    print(f\"{key}: Precision={value.precision:.4f}, Recall={value.recall:.4f}, F1-Score={value.fmeasure:.4f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
