Exploration based evaluation

--- a/learn/Human & Preference-Based Evaluation.ipynb
+++ b/learn/Human & Preference-Based Evaluation.ipynb
@@ -279,13 +279,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "760f4429f6d344dba5c83f8c3c627bcd",
+       "model_id": "30754f553b3f4406b70a36296416f765",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,7 +299,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fcd112079d7d4925b2cce23f5ac75f81",
+       "model_id": "a405d27823c14be0a5878180f19e7ea9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e205d34cf3f4d5bad7d57a62b98813c",
+       "model_id": "c98c5fed3da849acbe9440ae536a458c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,28 +328,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at prajjwal1/bert-tiny and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c136ccd604304991a806ef88b03b7639",
+       "model_id": "21724dba9ca84632877337e34bcb43f2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/50 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/3487 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/harshbhatt/miniconda3/envs/qunta-backend/lib/python3.11/site-packages/transformers/training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a27fd638fa843de864b0b311b4365b9",
+       "model_id": "5a29a8751eb64e108239b52f54f2f864",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,49 +380,7 @@
      ]
     }
    ],
-   "source": [
-    "import torch\n",
-    "from datasets import load_dataset\n",
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer, TrainingArguments, Trainer\n",
-    "\n",
-    "# Load a smaller human preference dataset (1% of SHP dataset)\n",
-    "dataset = load_dataset(\"stanfordnlp/SHP\", split=\"train[:1%]\")\n",
-    "\n",
-    "# Load a pre-trained transformer model for reward scoring\n",
-    "model_name = \"distilbert-base-uncased\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=1).to(device)\n",
-    "\n",
-    "# Tokenize dataset\n",
-    "def preprocess(examples):\n",
-    "    return tokenizer(examples[\"human_ref_A\"], truncation=True, padding=\"max_length\", max_length=512)\n",
-    "\n",
-    "tokenized_dataset = dataset.map(preprocess, batched=True)\n",
-    "\n",
-    "# Reduce dataset size for quick training\n",
-    "train_dataset = tokenized_dataset.shuffle(seed=42).select(range(min(100, len(tokenized_dataset))))\n",
-    "\n",
-    "# Define training arguments\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir=\"./reward_model\",\n",
-    "    evaluation_strategy=\"no\",\n",
-    "    per_device_train_batch_size=4,\n",
-    "    save_strategy=\"epoch\",\n",
-    "    logging_steps=10,\n",
-    "    report_to=\"none\",  # Avoids logging to WandB by default\n",
-    ")\n",
-    "\n",
-    "# Initialize trainer\n",
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=train_dataset,\n",
-    ")\n",
-    "\n",
-    "# Train the reward model\n",
-    "trainer.train()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
