--- a/learn/Traditional NLP Metrics.ipynb
+++ b/learn/Traditional NLP Metrics.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -304,6 +304,88 @@
     "scores = scorer.score(reference, candidate)\n",
     "for key, value in scores.items():\n",
     "    print(f\"{key}: Precision={value.precision:.4f}, Recall={value.recall:.4f}, F1-Score={value.fmeasure:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### METEOR (Metric for Evaluation of Translation with Explicit ORdering)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "METEOR improves BLEU by considering:\n",
+    "Synonym Matching (e.g., “fast” and “quick” are considered the same)\n",
+    "\n",
+    "Stem Matching (e.g., “running” and “run” are matched)\n",
+    "\n",
+    "Recall & Precision Balance\n",
+    "\n",
+    "Word Order Consideration\n",
+    "\n",
+    "🔹 Range: 0 (bad) to 1 (perfect)\n",
+    "\n",
+    "🔹 Best for: Translation & Summarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /Users/harshbhatt/nltk_data...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "METEOR Score: 0.6250\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.translate.meteor_score import meteor_score\n",
+    "\n",
+    "nltk.download('wordnet')\n",
+    "\n",
+    "# Example 1 - Basic METEOR Calculation\n",
+    "reference = [[\"the\", \"cat\", \"is\", \"on\", \"the\", \"mat\"]]  # List of lists (each reference tokenized)\n",
+    "candidate = [\"the\", \"cat\", \"sits\", \"on\", \"the\", \"floor\"]  # Tokenized candidate sentence\n",
+    "\n",
+    "score = meteor_score(reference, candidate)\n",
+    "print(f\"METEOR Score: {score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "METEOR Score: 0.2871\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2 - Handling Synonyms & Stemming\n",
+    "reference = [[\"the\", \"quick\", \"brown\", \"fox\", \"jumps\", \"over\", \"the\", \"lazy\", \"dog\"]]\n",
+    "candidate = [\"a\", \"fast\", \"fox\", \"leaps\", \"above\", \"a\", \"sleepy\", \"canine\"]\n",
+    "\n",
+    "score = meteor_score(reference, candidate)\n",
+    "print(f\"METEOR Score: {score:.4f}\")  # Should be higher than BLEU"
    ]
   },
   {
